Hide import file in Firefox. Fix wrapping in menu.

--- a/theme/_smui-theme.scss
+++ b/theme/_smui-theme.scss
@@ -1,5 +1,5 @@
 @use '@material/theme/index' as theme with (
-  $primary: #1976d2,
+  $primary: #1976d2
 );
 
 @use './common-themes';
@@ -7,8 +7,4 @@
 :root {
   --disabled-background: #eee;
   --filter-background: #f0f8ff;
-}
-
-.mdc-deprecated-list-item--disabled {
-  color: #888;
 }
