--- a/theme/common-themes.scss
+++ b/theme/common-themes.scss
@@ -174,3 +174,11 @@ button::-moz-focus-inner {
   width: 100%;
   font-size: 1rem;
 }
+
+.mdc-deprecated-list-item {
+  white-space: nowrap !important;
+}
+
+.mdc-deprecated-list-item--disabled {
+  color: #888;
+}
