--- a/theme/dark/_smui-theme.scss
+++ b/theme/dark/_smui-theme.scss
@@ -24,7 +24,3 @@ body {
   --disabled-background: #111;
   --filter-background: #0d0015;
 }
-
-.mdc-deprecated-list-item--disabled {
-  color: #888;
-}
